# ferromotion

./: .gitignore  CONTROL.md  Cargo.toml  PROGRAM.md  README.md
.github/workflows/: ci.yml
crates/ferromotion/: Cargo.toml  README.md
crates/ferromotion-cloth/: Cargo.toml  README.md
crates/ferromotion-cloth/src/: lib.rs
crates/ferromotion-control/: Cargo.toml  README.md
crates/ferromotion-control/src/: abfilter.rs  actuator.rs  admittance.rs  algames.rs  alip.rs  assignment.rs  boxddp.rs  c3.rs  cbf.rs  ccm.rs  cdpr.rs  cem.rs  centroidal_mpc.rs  complementary_filter.rs  covariance_steering.rs  coverage.rs  cpg.rs  ctr.rs  cw.rs  dcm.rs  dial_mpc.rs  diff_drive.rs  diff_mpc.rs  diff_qp.rs  dircon.rs  dmp.rs  dpilqr.rs  es_mpc.rs  estimation.rs  fddp.rs  frenet.rs  geometric_fabric.rs  geometric_se3.rs  hinf.rs  hj.rs  hqp.rs  icem.rs  ilqr.rs  imu_preint.rs  inekf.rs  (+35 more)
crates/ferromotion-core/: Cargo.toml  README.md
crates/ferromotion-core/examples/: elrobot.rs
crates/ferromotion-core/src/: aba.rs  apriltag.rs  bit_star.rs  bspline.rs  bundle.rs  camera.rs  catmull_rom.rs  cfd_contact.rs  chomp.rs  closed_loop.rs  collision.rs  constraints.rs  contact.rs  contact_ipm.rs  cosserat.rs  costs.rs  cspace_sdf.rs  dcol.rs  despike.rs  dex_retarget.rs  diffik.rs  dubins.rs  dyn_derivatives.rs  dynamics.rs  epa.rs  esdf.rs  essential.rs  fft.rs  fitting.rs  foci.rs  gcs.rs  geodetic.rs  geometry2d.rs  gjk.rs  gnc.rs  gpmp2.rs  grasp.rs  great_circle.rs  grid_astar.rs  hand_eye.rs  (+60 more)
crates/ferromotion-fluid/: Cargo.toml  README.md
crates/ferromotion-fluid/src/: lib.rs
crates/ferromotion-mpm/: Cargo.toml  README.md
crates/ferromotion-mpm/src/: adjoint.rs  lib.rs
crates/ferromotion-policy/: Cargo.toml  README.md
crates/ferromotion-policy/src/: flow.rs  lib.rs  rtc.rs
crates/ferromotion-rod/: Cargo.toml  README.md
crates/ferromotion-rod/src/: lib.rs
crates/ferromotion-ruckig/: Cargo.toml  README.md
crates/ferromotion-ruckig/src/: lib.rs
crates/ferromotion-tactile/: Cargo.toml  README.md
crates/ferromotion-tactile/src/: lib.rs  servo.rs
crates/ferromotion-wasm/: Cargo.toml  README.md
crates/ferromotion-wasm/src/: cable_lab.rs  cbf_lab.rs  consensus_lab.rs  ctr_lab.rs  dmp_lab.rs  foci_lab.rs  grasp_lab.rs  inekf_lab.rs  koopman_lab.rs  lib.rs  muscle_lab.rs  rmp_lab.rs  scvx_lab.rs  smoother_lab.rs  soft_lab.rs  topp_lab.rs  walk_lab.rs
crates/ferromotion/src/: lib.rs
demo/: index.html
docs/: FRONTIER.md  ROADMAP.md
examples/: build_demo.js  build_textbook.js  build_textbook_cable.js  build_textbook_cbf.js  build_textbook_consensus.js  build_textbook_ctr.js  build_textbook_dmp.js  build_textbook_foci.js  build_textbook_grasp.js  build_textbook_inekf.js  build_textbook_koopman.js  build_textbook_rmp.js  build_textbook_scvx.js  build_textbook_smoother.js  build_textbook_soft.js  build_textbook_topp.js  build_textbook_walk.js  shoot_demo.js  shoot_gpu.js  shoot_gpu_mppi.js  smoke.js  textbook-index.html
gpu/: fk.html  mppi.html
