[package]
name = "ferromotion-cloth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Differentiable FEM thin-shell cloth (StVK membrane + bending) for physical AI. WASM-clean."

[dependencies]
nalgebra.workspace = true
