[package]
name = "ferromotion-fluid"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "2D incompressible Navier-Stokes (MAC projection) for fluid–robot interaction. WASM-clean."

[dependencies]
faer = { version = "0.24", default-features = false, features = ["std"] }
