[package]
name = "ferromotion-mpm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Differentiable 2D Material Point Method (MLS-MPM) for soft/elastic/granular material. WASM-clean."

[dependencies]
nalgebra.workspace = true
