[package]
name = "ferromotion-rod"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Differentiable Discrete Elastic Rods for cables, tendons, and continuum/soft robots. WASM-clean."

[dependencies]
nalgebra.workspace = true
