[package]
name = "ferromotion-tactile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Differentiable optical-tactile (GelSight/DIGIT) sensor simulation — gel deformation → photometric image. WASM-clean."

[dependencies]
nalgebra.workspace = true
