[package]
name = "ferromotion-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Universal WebAssembly bindings for ferromotion — robot IK/kinematics in the browser, zero install."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferromotion-core = { path = "../ferromotion-core", version = "0.1.0" }
wasm-bindgen = "0.2"
nalgebra.workspace = true
